--- a/panelweb/WebContent/paginas/admin/configurarFiltrosIndicador.xhtml
+++ b/panelweb/WebContent/paginas/admin/configurarFiltrosIndicador.xhtml
@@ -23,7 +23,7 @@
 			</f:facet>
 			<p:row>
 				<p:column>
-					<p:dataTable emptyMessage="No existen filtros configurados a nivel de Indicador" value="#{filtrosIndicadorConfiguracion.filtros}"
+					<p:dataTable emptyMessage="No existen filtros configurados a nivel de Indicador" resizableColumns="true" value="#{filtrosIndicadorConfiguracion.filtros}"
 						style="margin:10px;" var="filtro">
 						<p:column headerText="Filtro">
 							<h:outputText value="#{filtro.nombre}" />
@@ -31,19 +31,17 @@
 						<p:column headerText="Valor">
 							<p:inputText value="#{filtro.valorInicial}" />
 						</p:column>
+						<f:facet name="footer">
+							<p:commandButton value="Consultar"  disabled="#{filtrosIndicadorConfiguracion.filtros.size()==0}" update=":form:msgs"
+								actionListener="#{filtrosIndicadorConfiguracion.guardarValoresFiltros}">
+								<f:param name="opcion" value="#{menuVista.opcion}" />
+								<f:param name="idIndicador"
+									value="#{menuVista.indicador.idIndicador}" />
+								<f:param name="idModelo"
+									value="#{menuVista.indicador.modeloGrafico.idModelo}" />
+							</p:commandButton>
+						</f:facet>
 					</p:dataTable>
-				</p:column>
-			</p:row>
-			<p:row>
-				<p:column>
-					<p:commandButton value="Consultar" update="msgs"
-						actionListener="#{filtrosIndicadorConfiguracion.guardarValoresFiltros}">
-						<f:param name="opcion" value="#{menuVista.opcion}" />
-						<f:param name="idIndicador"
-							value="#{menuVista.indicador.idIndicador}" />
-						<f:param name="idModelo"
-							value="#{menuVista.indicador.modeloGrafico.idModelo}" />
-					</p:commandButton>
 				</p:column>
 			</p:row>
 		</p:panelGrid>
