--- a/panelweb/WebContent/paginas/admin/editarIndicador.xhtml
+++ b/panelweb/WebContent/paginas/admin/editarIndicador.xhtml
@@ -33,18 +33,18 @@
 			<p:row>		
 				<p:column>Nombre Indicador:</p:column>
 				<p:column><p:inputText
-						value="#{indicadorEditar.indicador.nombre}" /></p:column>			
+						value="#{indicadorEditar.indicador.nombre}" required="true" requiredMessage="El nombre no debe estar vacio" /></p:column>			
 			</p:row>
 			<p:row>		
 				<p:column>Servicio de Consulta:</p:column>
 				<p:column>
 					<p:panelGrid columns="2">
-						<p:selectOneMenu id="servicio"  value="#{indicadorEditar.indiceWsgServicio}"  effect="fold"
+						<p:selectOneMenu id="servicio"  value="#{indicadorEditar.indiceWsgServicio}" required="true" requiredMessage="Seleccione el servicio"  effect="fold"
 							editable="false" >
 							<f:selectItems  value="#{indicadorEditar.wsgServicioSelect}" />
 						</p:selectOneMenu>
 												
-						<p:commandButton id="sqlQuery" actionListener="#{indicadorEditar.consultarSentencias}"  oncomplete="PF('sqlQuery').show()" update="detalleQuery"  icon="ui-icon-info" />
+						<p:commandButton id="sqlQuery" actionListener="#{indicadorEditar.consultarSentencias}"  immediate="true" oncomplete="PF('sqlQuery').show()" update="detalleQuery"  icon="ui-icon-info" />
 					
 					</p:panelGrid>
 				</p:column>
@@ -72,7 +72,7 @@
 		    <p:row>			
 				<p:column rowspan="3">Gráfico</p:column>
 				<p:column>Modelo Gráfico:</p:column>
-				<p:column><p:selectOneMenu id="modelo"
+				<p:column><p:selectOneMenu id="modelo" required="true" requiredMessage="Seleccione el modelo"
 						value="#{indicadorEditar.indiceModeloGrafico}" effect="fold" editable="false">
 						<f:selectItems value="#{indicadorEditar.modeloGraficoSelect}" />
 					</p:selectOneMenu></p:column>			
