actualizacion de presentacion

--- a/panelweb/WebContent/paginas/admin/configurarFiltrosIndicador.xhtml
+++ b/panelweb/WebContent/paginas/admin/configurarFiltrosIndicador.xhtml
@@ -18,7 +18,7 @@
 		<p:panelGrid style="margin-top:20px">
 			<f:facet name="header">
 				<p:row>
-					<p:column>Filtros de Datos de Indicador</p:column>
+					<p:column>Filtros de datos de indicador</p:column>
 				</p:row>
 			</f:facet>
 			<p:row>
