--- a/panelweb/WebContent/paginas/graficos/linea.xhtml
+++ b/panelweb/WebContent/paginas/graficos/linea.xhtml
@@ -11,6 +11,7 @@
 	</ui:define>
 
 <ui:define name="content">
+	<p:outputLabel rendered="#{areaView.codigoDeAplicacion != 777}" style="color:green;font-size:15px;font-weight:bold" value="Mensaje de la aplicacion: "/><p:outputLabel rendered="#{areaView.codigoDeAplicacion != 777}" style="color:red;font-size:15px;" value="#{areaView.mensajeDeAplicacion}"/>
 	<p:panelGrid rendered="#{menuVista.indicador.idIndicador != 0}"  style="margin:10px; width:100%;height:300px"  columns="1">
 		<p:chart type="line" id="linea2" model="#{lineView.lineModel2}"
 			style="margin:15px; width:60%;height:300px;" />
