--- a/panelweb/WebContent/paginas/admin/editarIndicador.xhtml
+++ b/panelweb/WebContent/paginas/admin/editarIndicador.xhtml
@@ -117,7 +117,7 @@
 					</p:column>
 				</p:row>
 				<p:row>
-					<p:column>[Descripcion]X:</p:column>
+					<p:column>[Descripción]X:</p:column>
 					<p:column>
 						<p:inputText value="#{indicadorEditar.indicador.etiquetaEjex}" />
 					</p:column>
