--- a/panelweb/WebContent/paginas/admin/nuevoIndicador.xhtml
+++ b/panelweb/WebContent/paginas/admin/nuevoIndicador.xhtml
@@ -95,7 +95,7 @@
 					</p:column>
 				</p:row>
 				<p:row>
-					<p:column>[Descripcion]X:</p:column>
+					<p:column>[Descripción]X:</p:column>
 					<p:column>
 						<p:inputText value="#{indicadorNuevo.indicador.etiquetaEjex}" />
 					</p:column>
