--- a/panelweb/WebContent/paginas/indicador/index.xhtml
+++ b/panelweb/WebContent/paginas/indicador/index.xhtml
@@ -8,8 +8,8 @@
 	template="/template/template.xhtml">
 	<ui:define name="overlay"></ui:define>
 	<ui:define name="content">
-		<center><H1>Bienvenido al Panel Gráfico</H1><br />
-		<H6>Elija una Seccion para ver sus indicadores y haga clic sobre el mismo</H6>
+		<center><H1>Bienvenido al panel de indicadores</H1><br />
+		<H6>Seleccione un indicador del menu, para activar las demas opciones</H6>
 
 		</center>
 	</ui:define>
