--- a/panelweb/WebContent/paginas/indicador/verIndicadorSeries.xhtml
+++ b/panelweb/WebContent/paginas/indicador/verIndicadorSeries.xhtml
@@ -19,7 +19,7 @@
 		
 			<f:facet name="header">
 				<p:row>
-					<p:column>Series configuradas</p:column>
+					<p:column>Series configuradas de indicador</p:column>
 				</p:row>
 			</f:facet>
 
@@ -32,12 +32,12 @@
 						style="margin:10px;" var="indicadorSerie" rows="5"
 							paginator="true">
 						
-						<p:column headerText="Nombre">
+						<p:column headerText="Nombre" footerText="contiene" filterBy="#{indicadorSerie.nombre}" filterFunction="#{filterView.filterByName}"  >
 							<p:outputLabel value="#{indicadorSerie.nombre}"  />
 						</p:column>
 
-						<p:column headerText="Estado">
-							<p:outputLabel value="#{indicadorSerie.estado}" />
+						<p:column headerText="Estado" footerText="contiene" filterBy="#{indicadorSerie.estadoVisual}" filterFunction="#{filterView.filterByName}"  >
+							<p:outputLabel value="#{indicadorSerie.estadoVisual}" />
 						</p:column>
 						
 	
