--- a/panelweb/WebContent/paginas/graficos/area.xhtml
+++ b/panelweb/WebContent/paginas/graficos/area.xhtml
@@ -6,17 +6,27 @@
 	xmlns:pe="http://primefaces.org/ui/extensions"
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	template="/template/template.xhtml">
-	
+
 	<ui:define name="head">
-		<f:event listener="#{dinamico.inicializaParametrosIndicadores(menuVista.indicador.idIndicador)}" type="preRenderView"></f:event>
+		<f:event
+			listener="#{dinamico.inicializaParametrosIndicadores(menuVista.indicador.idIndicador)}"
+			type="preRenderView"></f:event>
 	</ui:define>
 	<ui:define name="content">
-		<p:outputLabel rendered="#{areaView.codigoDeAplicacion != 777}" style="color:green;font-size:15px;font-weight:bold" value="Mensaje de la aplicacion: "/><p:outputLabel rendered="#{areaView.codigoDeAplicacion != 777}" style="color:red;font-size:15px;" value="#{areaView.mensajeDeAplicacion}"/>
-		<p:panelGrid rendered="#{menuVista.indicador.idIndicador != 0}"  style="margin:10px; width:100%;height:300px"  columns="1">
-
-			<p:chart type="line" id="area1" model="#{areaView.areaModel}"
-				style="margin:15px; width:60%;height:300px;" />
+		<p:outputLabel rendered="#{areaView.codigoDeAplicacion != 777}"
+			style="color:green;font-size:15px;font-weight:bold"
+			value="Mensaje de la aplicacion: " />
+		<p:outputLabel rendered="#{areaView.codigoDeAplicacion != 777}"
+			style="color:red;font-size:15px;"
+			value="#{areaView.mensajeDeAplicacion}" />
+		<p:panelGrid rendered="#{menuVista.indicador.idIndicador != 0}"
+			style="margin:10px; width:97%;" columns="1">
+			<p:scrollPanel mode="native" style="height:350px;">
+				<p:chart type="line" id="area1" model="#{areaView.areaModel}"
+					style="margin:15px;" />
+			</p:scrollPanel>
 		</p:panelGrid>
+		
 	</ui:define>
 
 </ui:composition>
