--- a/panelweb/WebContent/paginas/graficos/barra.xhtml
+++ b/panelweb/WebContent/paginas/graficos/barra.xhtml
@@ -12,15 +12,17 @@
 	</ui:define>
 
 	<ui:define name="content" >
-	<p:outputLabel rendered="#{areaView.codigoDeAplicacion != 777}" style="color:green;font-size:15px;font-weight:bold" value="Mensaje de la aplicacion: "/><p:outputLabel rendered="#{areaView.codigoDeAplicacion != 777}" style="color:red;font-size:15px;" value="#{areaView.mensajeDeAplicacion}"/>
-	<p:panelGrid rendered="#{menuVista.indicador.idIndicador != 0}"   style="margin:10px; width:100%;height:300px"   columns="1">
-	<p:chart type="bar" id="barra1"
-				model="#{barView.barModel}"
-				style="margin:15px; width:60%;height:300px;" />
-	
-	</p:panelGrid>
-	
+		<p:outputLabel rendered="#{areaView.codigoDeAplicacion != 777}" style="color:green;font-size:15px;font-weight:bold" value="Mensaje de la aplicacion: "/><p:outputLabel rendered="#{areaView.codigoDeAplicacion != 777}" style="color:red;font-size:15px;" value="#{areaView.mensajeDeAplicacion}"/>
 		
+			<p:panelGrid  rendered="#{menuVista.indicador.idIndicador != 0}"   style="margin:10px; width:97%;"   columns="1">
+			<p:scrollPanel mode="native" style="height:350px;">
+			<p:chart type="bar" id="barra1"
+						model="#{barView.barModel}"
+						style="margin:15px;" />
+			
+			</p:scrollPanel>	
+			</p:panelGrid>
+			
 	</ui:define>
 
 </ui:composition>
