--- a/panelweb/WebContent/paginas/indicador/verFiltros.xhtml
+++ b/panelweb/WebContent/paginas/indicador/verFiltros.xhtml
@@ -32,18 +32,17 @@
 						style="margin:10px;" var="filtro" rows="5"
 							paginator="true">
 
-						<p:column headerText="Filtro">
-							<p:outputLabel required="true" requiredMessage="El Nombre de Filtro no debe estar vacio"
-								value="#{filtro.nombre}" />
+						<p:column headerText="Filtro" footerText="contiene" filterBy="#{filtro.nombre}"  filterFunction="#{filterView.filterByName}"  >
+							<p:outputLabel value="#{filtro.nombre}" />
 						</p:column>
-						<p:column headerText="Indice">
-							<p:outputLabel required="true" requiredMessage="El Indice no debe estar vacio"
+						<p:column headerText="Orden" footerText="contiene" filterBy="#{filtro.indiceFiltro}"  filterFunction="#{filterView.filterByName}"  >
+							<p:outputLabel required="true" requiredMessage="El orden no debe estar vacio"
 								value="#{filtro.indiceFiltro}" />
 						</p:column>
 
-						<p:column headerText="Nivel">
+						<p:column headerText="Nivel" footerText="contiene" filterBy="#{filtro.anivelVisual}"  filterFunction="#{filterView.filterByName}" >
 							<p:outputLabel
-								value="#{(filtro.anivelIndicador=='S')?'INDICADOR':'SERIE'}" />
+								value="#{filtro.anivelVisual}" />
 						</p:column>
 						
 
