actualizacion de log de usuarios

--- a/panelweb/WebContent/paginas/general/login.xhtml
+++ b/panelweb/WebContent/paginas/general/login.xhtml
@@ -43,7 +43,7 @@ body {
 							<h:panelGroup>
 								<p:inputText id="j_username" required="true"
 									value="#{loginMgmtBean.userName}"
-									requiredMessage="Please enter username"></p:inputText>
+									requiredMessage="Ingrese su usuario"></p:inputText>
 								<p:watermark for="j_username" value="Ingrese su usuario" />
 							</h:panelGroup>
 							<h:outputText value="Clave  " />
