--- a/panelweb/WebContent/paginas/admin/editarIndicador.xhtml
+++ b/panelweb/WebContent/paginas/admin/editarIndicador.xhtml
@@ -110,8 +110,8 @@
 								maxlength="5" placeHolder=" " />
 							valor máx:<p:inputMask size="5"
 								requiredMessage="Ingrese un valor maximo"
-								value="#{indicadorEditar.indicador.valorMaxy}" mask="9?9999"
-								maxlength="5" placeHolder=" " />
+								value="#{indicadorEditar.indicador.valorMaxy}" mask="9?9999999"
+								maxlength="8" placeHolder=" " />
 						</h:panelGrid>
 
 					</p:column>
