--- a/panelweb/WebContent/paginas/admin/nuevoIndicador.xhtml
+++ b/panelweb/WebContent/paginas/admin/nuevoIndicador.xhtml
@@ -89,7 +89,7 @@
 					<p:column>
 						<h:panelGrid columns="4">
 							valor mín:<p:inputMask  required="true" requiredMessage="Ingrese un valor minimo" size="5" value="#{indicadorNuevo.indicador.valorMiny}" mask="9?9999" maxlength="5" placeHolder=" " />
-							valor máx:<p:inputMask  size="5" requiredMessage="Ingrese un valor maximo" value="#{indicadorNuevo.indicador.valorMaxy}" mask="9?9999" maxlength="5" placeHolder=" " />
+							valor máx:<p:inputMask  size="5" requiredMessage="Ingrese un valor maximo" value="#{indicadorNuevo.indicador.valorMaxy}" mask="9?9999999" maxlength="8" placeHolder=" " />
 						</h:panelGrid>
 						
 					</p:column>
